--- a/weeklies/requirements.txt
+++ b/weeklies/requirements.txt
@@ -1,6 +1,23 @@
 asgiref==3.4.1
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
 Django==3.2.8
 djangorestframework==3.12.4
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.0
+idna==2.10
+itsdangerous==2.0.1
+Jinja2==3.0.1
+klaviyo==3.1.3
+MarkupSafe==2.0.1
 psycopg2==2.9.1
+python-dotenv==0.19.1
 pytz==2021.3
+requests==2.25.1
+simplejson==3.17.2
+SQLAlchemy==1.4.18
 sqlparse==0.4.2
+urllib3==1.26.5
+Werkzeug==2.0.1
